--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 button {
     background-color: #EEBC4D;
     padding: 0.8em 1.2em;
+    margin: 0.4em;
 }
 .profile img {
     width: 192px;
